--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,8 +3,9 @@ on:
   push:
     branches: [dev, main]
 jobs:
-  publish-to-maven:
+  publish:
     runs-on: ubuntu-latest
+    environment: publish
     steps:
       - name: Cloning Repo
         uses: actions/checkout@v3
@@ -16,4 +17,4 @@ jobs:
       - name: Grant permissions to Gradle
         run: chmod +x gradlew
       - name: Publish with Gradle
-        run: ./gradlew clean jar publishAll -Pmaven.user=${{ secrets.USER }} -Pmaven.key=${{ secrets.USER_KEY }}
+        run: ./gradlew clean jar publishAll -Pmaven.user=${{ secrets.USER }} -Pmaven.key=${{ secrets.USER_KEY }} --no-daemon
