Github actions update, testing update, and removed/redid v1 vs v2 stuff.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [dev, main]
 jobs:
-  publish:
+  check:
     runs-on: ubuntu-latest
     steps:
       - name: Cloning Repo
